--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,3 +10,14 @@ body{
 .card{
   background-color: gray;
 }
+
+.google-auth{
+  height: 4em;
+  width: 20em;
+}
+
+.google-auth img{
+  width: 100%;
+  height: 100%;
+  border-radius: 3em;
+}
