--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 
 body{
-  background-color: black;
+  background-color: rgb(53, 138, 98);
   color: aliceblue;
   padding: 2em;
   text-align: center;
@@ -28,4 +28,8 @@ body{
 
 .friends-table{
   color:aliceblue;
+}
+
+.friend-table-x{
+  color: aliceblue;
 }
